tests/negative/test_fnc_non_eval_eval_ret.orb
fnc foo () () {
    eval (ret);
};

fnc main () () {};